tests/NormalTests/paczka1/fuzzy1/21359507.err
Error in line 10: rL7Q3uEZQE5 A414 94,48
Error in line 11: jzPz A347 58,6
Error in line 7: rL7Q3uEZQE5 A347 61,4
Error in line 17: A121 A347 89,11
Error in line 13: rL7Q3uEZQE5 S82 85,7
Error in line 23: cUEA A414 1,5
Error in line 20: rL7Q3uEZQE5 A347 93,6
Error in line 28: rL7Q3uEZQE5 S82 98,0
Error in line 35: cUEA A414 98,7
